--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="profile-toggle">
         <button id="about-btn" class="about-btn">
             <img src="images/logo.png" alt="About" class="about-logo">
-            <span class="click-hint">Click Model !</span>
+            <span class="click-hint">Click!</span>
         </button>
     </div>
 
